--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,18 @@ body {
     padding: 20px;
     background-color: black;
 }
+main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; /* Makes the main take the full viewport height */
+}
+
+/* Optional: If you want to style the logo */
+.logo {
+    max-width: 100%;
+    height: auto;
+}
 h1 {
     text-align: center;
     margin-bottom: 30px;
